Adding updated tcp settings for more performant file operations. Adding new relic support to base images.